--- a/pres.ipynb
+++ b/pres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -12,7 +12,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src=\"scrappy/scrappy_2.ipynb\" title=\"W3Schools Free Online Web Tutorials\"></iframe>\n"
+       "<iframe src=\"https://www.w3schools.com\" title=\"W3Schools Free Online Web Tutorials\"></iframe>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -24,7 +24,7 @@
    ],
    "source": [
     "%%HTML\n",
-    "<iframe src=\"scrappy/scrappy_2.ipynb\" title=\"W3Schools Free Online Web Tutorials\"></iframe>"
+    "<iframe src=\"https://www.w3schools.com\" title=\"W3Schools Free Online Web Tutorials\"></iframe>"
    ]
   }
  ],
